--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "user-management-and-organization",
+  "name": "user-management-system-and-organization",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@types/pg": "^8.11.6",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jest": "^29.7.0",
     "joi": "^17.13.3",
     "morgan": "~1.9.1",
     "pg": "^8.12.0"
